--- a/index.html
+++ b/index.html
@@ -25,67 +25,26 @@
     </header>
     <div class="top-wrapper">
       <div class="content">
-        <h1>WELCOME TO MY WEBPAGE</h1>
-        <img src="C:\Users\msing\OneDrive\Desktop\photo.jpeg"
+        <h1><u>WELCOME TO MY WEBPAGE</u></h1>
+        <img src="C:\Users\msing\OneDrive\Desktop\photo.jpeg" alt="Avatar" class="avatar">
         <p>Myself Diya, a first-year student at J.C. Bose University of Science and Technology,YMCA. I am doing B.Tech in Computer Engineering branch. My hobbies are coding, novel reading, watching movies, travelling and to do painting and crafts sometimes. My positive points includes my hardwork and dedication towards my work.</p>
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
-          <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
-        </div>
       </div>
     </div>
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h2>Get To Know More About Me</h2>
+<div class="btn-wrapper">
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Connect me with Facebook</a>
+          <p>or</p>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Connect me with Twitter</a>
         </div>
-        <div class="lessons">
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
-            </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
-            </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
-            </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
-            </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
-          </div>
-          <div class="clear"></div>
         </div>
-      </div>
-    </div>
-    <div class="message-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
-        </div>
-        <span class="btn message">Start Learning</span>
       </div>
     </div>
     <footer>
       <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTst0bPCetb2YqQwuNRqVpwRTkoLozhhlyKCA&usqp=CAU">
         <p><b>Hope you like my portfolio!</b></p>
       </div>
     </footer>
